:bug: fix: Correção de overflow

--- a/css/selecionar-user.css
+++ b/css/selecionar-user.css
@@ -45,6 +45,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 40px;
+    position: relative;
+    z-index: 999;
     .quit {
         background-color: #284277;
         height: fit-content;
